public/stylesheets/main.css
/**
 * main.css
 *
 * Copyright (c) 2008 Endeavor Systems, Inc.
 *
 * This file is part of OpenFISMA.
 *
 * OpenFISMA is free software: you can redistribute it and/or modify it under the terms of the GNU General Public 
 * License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later 
 * version.
 *
 * OpenFISMA is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
 * warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more 
 * details.
 *
 * You should have received a copy of the GNU General Public License along with OpenFISMA.  If not, see {@link
 * http://www.gnu.org/licenses/}.
 */
 
/* The main style sheet for OpenFISMA. This includes all of the non-YUI, foundational styles.
 *
 * Author:    Mark E. Haase <mhaase@endeavorsystems.com>
 * Copyright: (c) Endeavor Systems, Inc. 2009 (http://www.endeavorsystems.com)
 * License:   http://www.openfisma.org/content/license
 * Version:   $Id$
 */

#skip a, #skip a:hover, #skip a:visited {
    position: absolute;
    left: 0px;
    top: -500px;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

#skip a:active, #skip a:focus {
    position: static;
    width: auto;
    height: auto;
}

/* Generic styles -- this section contains style information for generic elements. Generally speaking, we should be
 * careful about modifying elements directly. However, these are based on the YUI reset that has already been loaded
 * when this style sheet is loaded.
 */
em {
    font-weight: bold;
}

ul {
    padding-bottom: 10px;
}

ul li {
    display: list-item;
    list-style: disc outside;
    margin-left: 35px;
    text-align: left;
}

ol li {
    display: list-item;
    list-style: decimal outside;
    margin-left: 35px;
    text-align: left;
}

p {
    margin: 10px 0px 10px 0px;
}

h1 {
    font-size: large;
    font-weight: bold;
}

/* This style is very finicky in IE7. Don't modify it unless you're double checking it in IE7 as you go. */
input[readonly] {
    color: #999 ! important;
    background-color: #f0f0f0 ! important;
}

/* This next section contains application-specific styles. Each style should
   be named for what it *does*, and not what it *looks like*. This standard
   improves application maintenance. */

/* Create some space around the body content */
body {
	padding: 10px;
	text-align: left;
}

/* The logo is floated to the left */
div#logo {
    float: left;
    margin-bottom: 10px;
}

/* The logout form is floated to the right and 
   moved down a bit from the corner. */
div#logout {
    float: right;
    text-align: right;
    margin-top: 10px;
}

div#logout p {
    margin-top: 8px;
}

/* Styling for the menubar. The min-height reserves the space required for the menubar while it loads. */
div#menubar {
    clear: both;
    font-weight: bold;
    min-height: 25px;
    background-color: #d3d3d3;
}

/* This class is used to mark elements which should only be applied when data is transferred to 
   external media, such as a print out. By default, these items are hidden. @see print.css */
div.externalMediaMarking {
    display: none;
}

/* The content area is the middle of the page in between the header and the footer */
div#content {
	margin: 10px 0px;
}

/* Sections are used to divide long pages up into separate and distinct content blocks. */
div.sectionHeader {
	margin-top: 10px;
    padding: 3px 8px;
    background-color: #416ed7;
    color: #fff;
    border: 1px solid #416ed7;
    border-bottom: none;
    font-weight: bold;
    text-align: left;
}

div.sectionHeader a {
    color: white;
}

div.section {
    border: 1px solid #d3d3d3;
    background-color: #ffffff;
    border-top: none;
    padding: 10px;
    position: relative;
    height: 100%;
    margin-bottom: 0px;
}

/* Panels are a subdivision of the sections */
div.panel {
    border: 1px solid #d3d3d3;
    margin-bottom: 10px;
    padding: 10px;
}

/* 
These definitions provide an easy method for creating columns.
For example, two columns can be arranged like this:
<div class="column left"></div> 
<div class="column right"></div>
<div class="clear"></div>
*/
div.column {
	width: 49%;
	margin-bottom: 0px;
}

div.left {
    float: left;
}

div.right {
    float: right;
}

div.clear {
    clear: both;
}

/* Used to display a stacktrace. Traces might be long so the paragraph needs to be able to scroll horizontally. */
p.stacktrace {
    margin: 10px;
    border: 1px solid #d3d3d3;
    #ffffff-space: pre;
    font-family: monospace;
    overflow: auto;
    white-space: pre-wrap;
}

/* Provide some whitespace at the bottom of the page. */
div#footer {
    margin: 10px 0px;
    padding: 3px;
}

/* The footer links are aligned in the bottom-right corner */
div#footerLinks {
    float: right;
}

/* This table is used to display key-value pairs, such as on the remediation
   detail page. */
table.keyValues tr:nth-child(even) {
	background-color: #eef5fe;
}

table.keyValues td {
    padding: 5px;
    vertical-align: middle;
}

/* The first column in a keyValues table is bold text */
table.keyValues td:first-child {
    font-weight: bold;
    text-align: right;
}

table.keyValues th {
    text-align: center;
    font-weight: bold;
    font-style: normal;
    padding: 5px;
}

div.buttonBar {
    margin-bottom: 10px;
}

/* This style is used to create a field which is editable on the finding detail page. It displays an edit icon (a
 * pencil) and the element which uses this class should also set a target attribute which contains the id of the
 * element which needs to become editable.
 */
.editable {
    background: url(/images/edit.png) no-repeat top right;
    padding-right: 20px;
    margin-right: 10px;
    cursor: pointer;
}
/* ... */

